Fix alignment issue

--- a/web/src/stylesheets/public/pages/page-projects.scss
+++ b/web/src/stylesheets/public/pages/page-projects.scss
@@ -7,8 +7,8 @@
 }
 
 #search .search_box {
-  float: right; 
-  margin-top: 15px;
+  float: right;
+	margin-top: 14px;
 }
 
 #search .search_box .question input {
